--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,34 +1,41 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto:wght@300&family=Space+Mono&display=swap" rel="stylesheet">
-
     <link rel="icon" href="{% static 'media/logo.png' %}">
 
-    <title>Login</title>
-</head>
-<body>
-    <div>
-        <h2>LogIn</h2>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+    <title>Authentication Panel</title>
+</head>
+
+<body> 
+    <div class="login-box">
+        <img src="{% static 'media/logo.png' %}" height="64px">
+        
+        {% if error %}
+        <script>
+            swal({
+                title: "Access Denied!",
+                text: "Bad credentials typed in.",
+                icon: "error",
+                button: "Exit",
+            });
+        </script>
+        {% endif %}
+        
         <form method="post">
             {% csrf_token %}
-            
-            <input type="text" id="credentials" placeholder="Username">
-            <input type="password" id="credentials" placeholder="Password">
-            
-            <input type="submit" value="Enter">
+            <input type="text" name="username" id="credentials" placeholder="Username" required>
+            <input type="password" name="password" id="credentials" placeholder="Password" required>
+            <button type="submit">Log in</button>
         </form>
-
-        <p>Don't have a account? <a href="./register.html">Register</a>.</p>
     </div>
 </body>
+
 </html>
