--- a/api/templates/panel.html
+++ b/api/templates/panel.html
@@ -1,11 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <link rel="stylesheet" type="text/css" href="{% static 'css/panel.css' %}" />
+    <link rel="icon" href="{% static 'media/logo.png' %}">
+    
+    <title>Admin Panel</title>
 </head>
 <body>
     <h1>Hi!</h1>
+    <div class="user-information">
+        <p>Lorem Ipsum</p>
+    </div>
 </body>
 </html>
